--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "run": "bun index.ts",
-    "clean": "rimraf output"
+    "start": "bun index.ts",
+    "clean": "rimraf output",
+    "dev": "bun run clean && bun run start"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
