--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.1.0",
+    "deepcopy": "^2.1.0",
     "json-cycle": "^1.5.0",
     "log-symbols": "^6.0.0",
     "minimist": "^1.2.8",
